--- a/index.html
+++ b/index.html
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Shumoizolyator</title>
+    <link rel="stylesheet" href="/css/index.css" />
+  </head>
 
-</body>
+  <body>
+    <div class="header">
+      <tr>
+        <td><img src="/photos/My_photo.jpg" width="50%" /></td>
+        <td>Стрижаков Тихон | Shumoizolyator</td>
+      </tr>
+    </div>
+    <div class="about_me">
+      <h2>Обо мне</h2>
+      Меня зовут Стрижаков Тихон Сергеевич. Закончив Московский Полиграфический
+      Колледж им. И. Федорова на мультипликатора и отслужив год в армии я
+      остался художником с последним пенни в кармане. Сейчас активно изучаю
+      науку IT разработки в школе Elbrus bootcamp. С информационными
+      технологиями у меня связана вся жизнь, поэтому я хочу проявить все свои
+      навыки в этой сфере, и заработать много новых полезных скиллов.
+    </div>
+    <h2>Мои навыки</h2>
+
+    <div>Художник, знаю английский язык, начинающий разработчик.</div>
+    <h2>Умею пользоваться</h2>
+    <div class="icons">
+      <tr>
+        <td><img src="/Icons/PS_I.png" width="70" alt="pic" /></td>
+        <td><img src="/Icons/AE_I.png" width="70" alt="pic" /></td>
+        <td><img src="/Icons/Pr_I.png" width="70" alt="pic" /></td>
+        <td><img src="/Icons/AI_I.png" width="70" alt="pic" /></td>
+        <td><img src="/Icons/AA_I.png" width="70" alt="pic" /></td>
+      </tr>
+    </div>
+    <h2>Учусь пользоваться</h2>
+    <div class="icons">
+      <tr>
+        <td><img src="/Icons/JS_I.png" width="70" alt="pic" /></td>
+        <td><img src="/Icons/GIT_I.png" width="70" alt="pic" /></td>
+        <td><img src="/Icons/HTML_I.svg" width="70" alt="pic" /></td>
+        <td><img src="/Icons/CSS_I.png" width="70" alt="pic" /></td>
+      </tr>
+    </div>
+    <div class="portfolio"></div>
+    <div class="footer"></div>
+  </body>
 </html>
