--- a/index.html
+++ b/index.html
@@ -9,24 +9,38 @@
   </head>
 
   <body>
-    <div class="header">
+    <div name="top" class="header">
       <tr>
-        <td><img src="/photos/My_photo.jpg" width="50%" /></td>
+        <td>
+          <img
+            src="/photos/My_photo.jpg"
+            width="50%"
+            style="padding-left: 60px"
+          />
+        </td>
         <td>Стрижаков Тихон | Shumoizolyator</td>
       </tr>
     </div>
     <div class="about_me">
       <h2>Обо мне</h2>
-      Меня зовут Стрижаков Тихон Сергеевич. Закончив Московский Полиграфический
-      Колледж им. И. Федорова на мультипликатора и отслужив год в армии я
-      остался художником с последним пенни в кармане. Сейчас активно изучаю
-      науку IT разработки в школе Elbrus bootcamp. С информационными
-      технологиями у меня связана вся жизнь, поэтому я хочу проявить все свои
-      навыки в этой сфере, и заработать много новых полезных скиллов.
+      <p>
+        Меня зовут Стрижаков Тихон Сергеевич. Закончив Московский
+        Полиграфический Колледж им. И. Федорова на мультипликатора и отслужив
+        год в армии я остался художником с последним пенни в кармане. Сейчас
+        активно изучаю науку IT разработки в школе Elbrus bootcamp. С
+        информационными технологиями у меня связана вся жизнь, поэтому я хочу
+        проявить все свои навыки в этой сфере, и заработать много новых полезных
+        скиллов.
+      </p>
     </div>
     <h2>Мои навыки</h2>
 
-    <div>Художник, знаю английский язык, начинающий разработчик.</div>
+    <div>
+      <p>
+        Художник, знаю английский язык, вкусно готовлю, иногда смешно шучу,
+        начинающий разработчик.
+      </p>
+    </div>
     <h2>Умею пользоваться</h2>
     <div class="icons">
       <tr>
@@ -42,11 +56,33 @@
       <tr>
         <td><img src="/Icons/JS_I.png" width="70" alt="pic" /></td>
         <td><img src="/Icons/GIT_I.png" width="70" alt="pic" /></td>
-        <td><img src="/Icons/HTML_I.svg" width="70" alt="pic" /></td>
+        <td><img src="/Icons/HTML_I.svg" width="62" alt="pic" /></td>
         <td><img src="/Icons/CSS_I.png" width="70" alt="pic" /></td>
       </tr>
     </div>
-    <div class="portfolio"></div>
-    <div class="footer"></div>
+    <div class="portfolio">
+      <h2>Портфолио</h2>
+      <div>
+        <img src="/portfolio pictures/Portfolio_0.jpg" alt="pic" /><img
+          src="/portfolio pictures/Portfolio_2.jpg"
+          alt="pic"
+        />
+      </div>
+      <div>
+        <img src="/portfolio pictures/Portfolio_3.jpg" alt="pic" /><img
+          src="/portfolio pictures/Portfolio_4.jpg"
+          alt="pic"
+        />
+      </div>
+      <div>
+        <img src="/portfolio pictures/Portfolio_1.jpg" alt="pic" /><img
+          src="/portfolio pictures/Portfolio_5.jpg"
+          alt="pic"
+        />
+      </div>
+    </div>
+    <div class="footer">
+      <a href="#top"><h2>Навверх</h2></a>
+    </div>
   </body>
 </html>
