--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shumoizolyator</title>
-    <link rel="stylesheet" href="/css/index.css" />
+    <link rel="stylesheet" href="./css/index.css" />
   </head>
 
   <body>
@@ -44,39 +44,39 @@
     <h2>Умею пользоваться</h2>
     <div class="icons">
       <tr>
-        <td><img src="/Icons/PS_I.png" width="70" alt="pic" /></td>
-        <td><img src="/Icons/AE_I.png" width="70" alt="pic" /></td>
-        <td><img src="/Icons/Pr_I.png" width="70" alt="pic" /></td>
-        <td><img src="/Icons/AI_I.png" width="70" alt="pic" /></td>
-        <td><img src="/Icons/AA_I.png" width="70" alt="pic" /></td>
+        <td><img src="./Icons/PS_I.png" width="70" alt="pic" /></td>
+        <td><img src="./Icons/AE_I.png" width="70" alt="pic" /></td>
+        <td><img src="./Icons/Pr_I.png" width="70" alt="pic" /></td>
+        <td><img src="./Icons/AI_I.png" width="70" alt="pic" /></td>
+        <td><img src="./Icons/AA_I.png" width="70" alt="pic" /></td>
       </tr>
     </div>
     <h2>Учусь пользоваться</h2>
     <div class="icons">
       <tr>
-        <td><img src="/Icons/JS_I.png" width="70" alt="pic" /></td>
-        <td><img src="/Icons/GIT_I.png" width="70" alt="pic" /></td>
-        <td><img src="/Icons/HTML_I.svg" width="62" alt="pic" /></td>
-        <td><img src="/Icons/CSS_I.png" width="70" alt="pic" /></td>
+        <td><img src="./Icons/JS_I.png" width="70" alt="pic" /></td>
+        <td><img src="./Icons/GIT_I.png" width="70" alt="pic" /></td>
+        <td><img src="./Icons/HTML_I.svg" width="62" alt="pic" /></td>
+        <td><img src="./Icons/CSS_I.png" width="70" alt="pic" /></td>
       </tr>
     </div>
     <div class="portfolio">
       <h2>Портфолио</h2>
       <div>
-        <img src="/portfolio pictures/Portfolio_0.jpg" alt="pic" /><img
-          src="/portfolio pictures/Portfolio_2.jpg"
+        <img src="./portfolio pictures/Portfolio_0.jpg" alt="pic" /><img
+          src="./portfolio pictures/Portfolio_2.jpg"
           alt="pic"
         />
       </div>
       <div>
-        <img src="/portfolio pictures/Portfolio_3.jpg" alt="pic" /><img
-          src="/portfolio pictures/Portfolio_4.jpg"
+        <img src="./portfolio pictures/Portfolio_3.jpg" alt="pic" /><img
+          src="./portfolio pictures/Portfolio_4.jpg"
           alt="pic"
         />
       </div>
       <div>
-        <img src="/portfolio pictures/Portfolio_1.jpg" alt="pic" /><img
-          src="/portfolio pictures/Portfolio_5.jpg"
+        <img src="./portfolio pictures/Portfolio_1.jpg" alt="pic" /><img
+          src="./portfolio pictures/Portfolio_5.jpg"
           alt="pic"
         />
       </div>
