--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <tr>
         <td>
           <img
-            src="/photos/My_photo.jpg"
+            src="./photos/My_photo.jpg"
             width="50%"
             style="padding-left: 60px"
           />
